force-app/main/default/objects/Project__c/fields/Left_Quarter_Select_Size__c.field-meta.xml
<CustomField>
    <fullName>Left_Quarter_Select_Size__c</fullName>
    <label>Select Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Nickel</fullName>
            </value>
            <value>
                <fullName>Dime</fullName>
            </value>
            <value>
                <fullName>Half$</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>