force-app/main/default/objects/Project__c/fields/Left_Quarter_Write_Supplement__c.field-meta.xml
<CustomField>
    <fullName>Left_Quarter_Write_Supplement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Quarter: Write Supplement?</label>
    <type>Checkbox</type>
</CustomField>