force-app/main/default/objects/Project__c/fields/Left_Rail_Begin_Repair__c.field-meta.xml
<CustomField>
    <fullName>Left_Rail_Begin_Repair__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Rail Begin Repair</label>
    <type>Checkbox</type>
</CustomField>