force-app/main/default/objects/Project__c/fields/Left_Rail_Number_of_Oversized_Dents__c.field-meta.xml
<CustomField>
    <fullName>Left_Rail_Number_of_Oversized_Dents__c</fullName>
    <label>Number of Oversized Dents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>