force-app/main/default/objects/Project__c/fields/Left_Rail_Supplement_Required__c.field-meta.xml
<CustomField>
    <fullName>Left_Rail_Supplement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Left Rail: Additional Photos?</label>
    <type>Checkbox</type>
</CustomField>