force-app/main/default/objects/Project__c/fields/Marketing_Pay_Backend__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Pay_Backend__c</fullName>
    <label>Marketing Pay Backend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>