force-app/main/default/objects/Project__c/fields/Marketter__c.field-meta.xml
<CustomField>
    <fullName>Marketter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account object which contains marketter quick book id</description>
    <label>Marketer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Projects (Marketter)</relationshipLabel>
    <relationshipName>Marketter_Project</relationshipName>
    <type>Lookup</type>
</CustomField>