force-app/main/default/objects/Project__c/fields/Marketting_Pay__c.field-meta.xml
<CustomField>
    <fullName>Marketting_Pay__c</fullName>
    <formula>Marketing_Pay_Backend__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketer Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>