force-app/main/default/objects/Project__c/fields/Mode_of_contact_with_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_contact_with_Insurance__c</fullName>
    <label>Mode of contact with Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Online Portal</fullName>
            </value>
            <value>
                <fullName>Adjuster(In person)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>