force-app/main/default/objects/Project__c/fields/Need_Rental_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Need_Rental_Y_N__c</fullName>
    <label>Need Rental (Y/N)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>