force-app/main/default/objects/Project__c/fields/Need_to_order__c.field-meta.xml
<CustomField>
    <fullName>Need_to_order__c</fullName>
    <label>Need to order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>