force-app/main/default/objects/Project__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>21/06/21 Indu Added for Scope Form Requirement</description>
    <label>Notes To Scope Team</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>