force-app/main/default/objects/Project__c/fields/Notes_For_Send_To_Body_Shop__c.field-meta.xml
<CustomField>
    <fullName>Notes_For_Send_To_Body_Shop__c</fullName>
    <label>Notes For Send To Body Shop</label>
    <type>TextArea</type>
</CustomField>