force-app/main/default/objects/Project__c/fields/Notes_For_Vendor_At_Shop__c.field-meta.xml
<CustomField>
    <fullName>Notes_For_Vendor_At_Shop__c</fullName>
    <label>Notes For Vendor At Shop</label>
    <type>TextArea</type>
</CustomField>