force-app/main/default/objects/Project__c/fields/Number_of_Panels_Push_to_Paint__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Panels_Push_to_Paint__c</fullName>
    <label>Number of Panels Push to Paint</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>