force-app/main/default/objects/Project__c/fields/Office_Admin_Pay__c.field-meta.xml
<CustomField>
    <fullName>Office_Admin_Pay__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Office Admin Cost</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>