force-app/main/default/objects/Project__c/fields/Office_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Office_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office: Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>