force-app/main/default/objects/Project__c/fields/Office_Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Office_Logged_In_User__c</fullName>
    <formula>IF(  Office_Assigned_To__c  = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Office Logged In User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>