force-app/main/default/objects/Project__c/fields/Office_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Office_Start_Date__c</fullName>
    <label>Office Start Date</label>
    <type>Date</type>
</CustomField>