force-app/main/default/objects/Project__c/fields/Our_Prelim_Estimate_Send_to_Ins_FID__c.field-meta.xml
<CustomField>
    <fullName>Our_Prelim_Estimate_Send_to_Ins_FID__c</fullName>
    <label>Our Prelim Estimate (Send to Ins) FID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>