force-app/main/default/objects/Project__c/fields/Our_Supplements_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Our_Supplements_Folder_ID__c</fullName>
    <label>Our Supplements Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>