force-app/main/default/objects/Project__c/fields/Our_Total_Loss_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Our_Total_Loss_Invoice__c</fullName>
    <label>Our Total Loss InvoiceFolder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>