force-app/main/default/objects/Project__c/fields/Part_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Part_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I acknowledge the work done to be of high quality for Part  Backend field</description>
    <inlineHelpText>I acknowledge the work done to be of high quality for Part</inlineHelpText>
    <label>Part Acknowledge</label>
    <type>Checkbox</type>
</CustomField>