force-app/main/default/objects/Project__c/fields/Part_Tax__c.field-meta.xml
<CustomField>
    <fullName>Part_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Parts Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>