force-app/main/default/objects/Project__c/fields/Parts_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Parts_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parts: Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>