force-app/main/default/objects/Project__c/fields/Parts_Duration__c.field-meta.xml
<CustomField>
    <fullName>Parts_Duration__c</fullName>
    <formula>(floor((  Parts_End_Date__c -  Parts_Start_Date__c )*24))
+
(((((Parts_End_Date__c - Parts_Start_Date__c)*24)-floor((Parts_End_Date__c - Parts_Start_Date__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parts Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>