force-app/main/default/objects/Project__c/fields/Parts_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_End_Date__c</fullName>
    <label>Parts End Date</label>
    <type>DateTime</type>
</CustomField>