force-app/main/default/objects/Project__c/fields/Parts_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Parts_Start_Date__c</fullName>
    <label>Parts Start Date</label>
    <type>DateTime</type>
</CustomField>