force-app/main/default/objects/Project__c/fields/Parts_User_LoggedIn_Flag__c.field-meta.xml
<CustomField>
    <fullName>Parts_User_LoggedIn_Flag__c</fullName>
    <formula>IF(Parts_Assigned_To__c = $User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parts User LoggedIn Flag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>