force-app/main/default/objects/Project__c/fields/Payment_Item__c.field-meta.xml
<CustomField>
    <fullName>Payment_Item__c</fullName>
    <label>Payment Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved Estimate</fullName>
            </value>
            <value>
                <fullName>Approved Supp 1</fullName>
            </value>
            <value>
                <fullName>Approved Supp 2</fullName>
            </value>
            <value>
                <fullName>Approved Supp 3</fullName>
            </value>
            <value>
                <fullName>Customer Owed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>