force-app/main/default/objects/Project__c/fields/Payment_Proof_File__c.field-meta.xml
<CustomField>
    <fullName>Payment_Proof_File__c</fullName>
    <label>Payment Proof File</label>
    <length>240</length>
    <type>Text</type>
</CustomField>