force-app/main/default/objects/Project__c/fields/Payment_Proof_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Proof_Folder_ID__c</fullName>
    <label>Payment Proof Folder ID</label>
    <length>240</length>
    <type>Text</type>
</CustomField>