force-app/main/default/objects/Project__c/fields/PDR__c.field-meta.xml
<CustomField>
    <fullName>PDR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I acknowledge the work done to be of high quality for PDR</description>
    <inlineHelpText>I acknowledge the work done to be of high quality for PDR</inlineHelpText>
    <label>PDR Acknowledge</label>
    <type>Checkbox</type>
</CustomField>