force-app/main/default/objects/Project__c/fields/PDR_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>PDR_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PDR: Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>