force-app/main/default/objects/Project__c/fields/PDR_Duration__c.field-meta.xml
<CustomField>
    <fullName>PDR_Duration__c</fullName>
    <formula>(floor((  PDR_End_Date__c -  PDR_Start_Date__c )*24))
+
(((((PDR_End_Date__c- PDR_Start_Date__c)*24)-floor((PDR_End_Date__c- PDR_Start_Date__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDR Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>