force-app/main/default/objects/Project__c/fields/PDR_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PDR_End_Date__c</fullName>
    <label>PDR End Date</label>
    <type>DateTime</type>
</CustomField>