force-app/main/default/objects/Project__c/fields/PDR_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PDR_Start_Date__c</fullName>
    <label>PDR Start Date</label>
    <type>DateTime</type>
</CustomField>