force-app/main/default/objects/Project__c/fields/PDR_User_LoggedIn_Flag__c.field-meta.xml
<CustomField>
    <fullName>PDR_User_LoggedIn_Flag__c</fullName>
    <formula>IF(  PDR_Assigned_To__c  = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDR User LoggedIn Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>