force-app/main/default/objects/Project__c/fields/Power_of_Attorney_ID__c.field-meta.xml
<CustomField>
    <fullName>Power_of_Attorney_ID__c</fullName>
    <label>Power of Attorney Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>