force-app/main/default/objects/Project__c/fields/President_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>President_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to user object</description>
    <label>President Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects_President</relationshipName>
    <type>Lookup</type>
</CustomField>