force-app/main/default/objects/Project__c/fields/Pri_Damage_Exterior_FolderID__c.field-meta.xml
<CustomField>
    <fullName>Pri_Damage_Exterior_FolderID__c</fullName>
    <label>Pri Damage Exterior FolderID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>