force-app/main/default/objects/Project__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>20/08/2021 Indu Added for Multi Vehicle requirement</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>