force-app/main/default/objects/Project__c/fields/Primary_RO__c.field-meta.xml
<CustomField>
    <fullName>Primary_RO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>18/08/2021 Indu Added for Multi Vehicle requirement</description>
    <label>Primary RO</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Related RO</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>