force-app/main/default/objects/Project__c/fields/Prior_Damage_Photo_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Prior_Damage_Photo_Folder_ID__c</fullName>
    <label>Prior Damage Photo Folder ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>