force-app/main/default/objects/Project__c/fields/Prior_Damage_Photos_URL__c.field-meta.xml
<CustomField>
    <fullName>Prior_Damage_Photos_URL__c</fullName>
    <label>Prior Damage Photos URL ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>