force-app/main/default/objects/Project__c/fields/Prior_Damage_Photos_URL_Forrmula__c.field-meta.xml
<CustomField>
    <fullName>Prior_Damage_Photos_URL_Forrmula__c</fullName>
    <formula>HYPERLINK(&apos;https://drive.google.com/drive/u/2/folders/&apos;&amp; Prior_Damage_Photo_Folder_ID__c ,&apos;Click to see the prior damage photos&apos;, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Damage Photos URL</label>
    <type>Text</type>
</CustomField>