force-app/main/default/objects/Project__c/fields/Prior_Damage_Pictures_Duration__c.field-meta.xml
<CustomField>
    <fullName>Prior_Damage_Pictures_Duration__c</fullName>
    <formula>Prior_Damage_Pictures_End_Date__c -  Prior_Damage_Pictures_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Damage Photos in GDrive Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>