force-app/main/default/objects/Project__c/fields/Prior_Damage_Pictures_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Damage_Pictures_End_Date__c</fullName>
    <label>Prior Damage Photos in GDrive End Date</label>
    <type>DateTime</type>
</CustomField>