force-app/main/default/objects/Project__c/fields/Prior_Damaged__c.field-meta.xml
<CustomField>
    <fullName>Prior_Damaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prior Damage Photos in GDrive</label>
    <type>Checkbox</type>
</CustomField>