force-app/main/default/objects/Project__c/fields/Production_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>Production_Current_Status__c</fullName>
    <description>Latest Production status for Shop Manager List View</description>
    <label>Production Current Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>