force-app/main/default/objects/Project__c/fields/Production_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Production_End_Date__c</fullName>
    <label>Production End Date</label>
    <type>Date</type>
</CustomField>