force-app/main/default/objects/Project__c/fields/Production_Status__c.field-meta.xml
<CustomField>
    <fullName>Production_Status__c</fullName>
    <label>Production Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Headliner Down</fullName>
            </value>
            <value>
                <fullName>PDR ready2rock</fullName>
            </value>
            <value>
                <fullName>Quality Check #1</fullName>
            </value>
            <value>
                <fullName>Headliner Up</fullName>
            </value>
            <value>
                <fullName>Body Shop</fullName>
            </value>
            <value>
                <fullName>Parts Installed</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Quality Check #2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>