force-app/main/default/objects/Project__c/fields/QC_1_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>QC_1_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QC #1: Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectsmkWP</relationshipName>
    <type>Lookup</type>
</CustomField>