force-app/main/default/objects/Project__c/fields/QC_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>QC_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I acknowledge the work done to be of high quality for QC Acknowledge</description>
    <inlineHelpText>I acknowledge the work done to be of high quality for QC Acknowledge</inlineHelpText>
    <label>QC #2 Acknowledge</label>
    <type>Checkbox</type>
</CustomField>