force-app/main/default/objects/Project__c/fields/QC_Duration__c.field-meta.xml
<CustomField>
    <fullName>QC_Duration__c</fullName>
    <formula>(floor((  QC_End_Date__c -  QC_Start_Date__c )*24))
+
(((((QC_End_Date__c - QC_Start_Date__c )*24)-floor((QC_End_Date__c - QC_Start_Date__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QC #2 Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>