force-app/main/default/objects/Project__c/fields/QC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QC_End_Date__c</fullName>
    <label>QC #2 End Date</label>
    <type>DateTime</type>
</CustomField>