force-app/main/default/objects/Project__c/fields/QC_Payout__c.field-meta.xml
<CustomField>
    <fullName>QC_Payout__c</fullName>
    <defaultValue>30</defaultValue>
    <label>QC Payout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>