force-app/main/default/objects/Project__c/fields/QC_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QC_Start_Date__c</fullName>
    <label>QC #2 Start Date</label>
    <type>DateTime</type>
</CustomField>