force-app/main/default/objects/Project__c/fields/QC_User_LoggedIn_Flag__c.field-meta.xml
<CustomField>
    <fullName>QC_User_LoggedIn_Flag__c</fullName>
    <formula>IF(  QC_Assigned_To__c =  $User.Id, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QC User LoggedIn Flag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>