force-app/main/default/objects/Project__c/fields/Quickbook_Updation_Completed__c.field-meta.xml
<CustomField>
    <fullName>Quickbook_Updation_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Once then quick book updating process completed this filed will be checked</description>
    <label>Sent To QBO?</label>
    <type>Checkbox</type>
</CustomField>