force-app/main/default/objects/Project__c/fields/R_I_Cost__c.field-meta.xml
<CustomField>
    <fullName>R_I_Cost__c</fullName>
    <defaultValue>150</defaultValue>
    <label>R&amp;I Payout</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>