force-app/main/default/objects/Project__c/fields/R_I_Down_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>R_I_Down_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>I acknowledge the work done to be of high quality for R&amp;I Down Backend field</description>
    <inlineHelpText>I acknowledge the work done to be of high quality for R&amp;I Down</inlineHelpText>
    <label>R&amp;I Down Acknowledge</label>
    <type>Checkbox</type>
</CustomField>