force-app/main/default/objects/Project__c/fields/R_I_Down_Duration__c.field-meta.xml
<CustomField>
    <fullName>R_I_Down_Duration__c</fullName>
    <formula>(floor(( R_I_Down_End_Date__c-   R_I_Start_Date__c)*24))
+
(((((R_I_Down_End_Date__c-  R_I_Start_Date__c)*24)-floor((R_I_Down_End_Date__c-  R_I_Start_Date__c)*24))*60)/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R&amp;I Down Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>