force-app/main/default/objects/Project__c/fields/R_I_Down_End_Date__c.field-meta.xml
<CustomField>
    <fullName>R_I_Down_End_Date__c</fullName>
    <label>R&amp;I Down End Date</label>
    <type>DateTime</type>
</CustomField>