force-app/main/default/objects/Project__c/fields/R_I_Down_User_Loggedin_Flag__c.field-meta.xml
<CustomField>
    <fullName>R_I_Down_User_Loggedin_Flag__c</fullName>
    <formula>IF( R_I_Assigned_To__c =$User.Id,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R&amp;I Down User Loggedin Flag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>