force-app/main/default/objects/Project__c/fields/R_I_Pending_Status__c.field-meta.xml
<CustomField>
    <fullName>R_I_Pending_Status__c</fullName>
    <label>R&amp;I Pending Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>