force-app/main/default/objects/Project__c/fields/R_I_Up_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>R_I_Up_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>R&amp;I Up: Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>